# random-samples

./: README.md
carpediem/: README.md  calendar_utils.py  demo.py  process_calendar_events.py  process_org_chart.py  scrape_calender_events.py  workday_utils.py
enzymology_mutation_effect_calculator/: Enzymology Mutation Performance Tool.ipynb  Prepare Sequence File Input.ipynb  README.md
enzymology_mutation_effect_calculator/code/: interface.py  session.py
enzymology_mutation_effect_calculator/code/emec/: generalizability_pipeline.py  pipeline.py
enzymology_mutation_effect_calculator/code/emec/utils/: alignment_utils.py  pipeline_utils.py  plot_utils.py  sequence_utils.py  simulation_utils.py  statsmodels_utils.py  supervised_pca.py  translation_utils.py  unambiguous-codon-mapping.json
enzymology_mutation_effect_calculator/code/tests/: __init__.py  db_username.txt  test_session.py
enzymology_mutation_effect_calculator/code/tests/emec/: test_generalizability_pipeline.py  test_pipeline.py
enzymology_mutation_effect_calculator/code/tests/emec/utils/: test_alignment_utils.py  (+2 more)
enzymology_mutation_effect_calculator/input_files/: pipeline_parameters.json  user_inputs.json
enzymology_mutation_effect_calculator/output_files/: alignment.csv  codon_table.txt  codon_usage.csv  model.pickle  model_coefficients.csv  model_predictions.csv  model_summary.csv
workflow-runner/: .gitignore  Dockerfile  README.md  pyproject.toml
workflow-runner/tests/: test_main.py
workflow-runner/tests/fixtures/: test_workflow.json
workflow-runner/workflow_runner/: main.py
(+8 files in other folders)
